(box size and bottom padding)

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <section class="flex px-[30px] mb-[30px]">
             <div class="flex w-half">
                 <div
-                    class="min-w-[700px] bg-black py-[140px] mt-[70px] align-center px-[50px] rounded-[30px] md:py-[140px] lg:py-[140px] sm:py-[140px] ">
+                    class="min-w-[700px] bg-black py-[90px] mt-[70px] align-center px-[50px] rounded-[30px] md:py-[90px] lg:py-[90px] sm:py-[90px] ">
                     <div>
                         <p class="w-90 text-[22px] font-bold text-white text-center mb-28">სილაბუსი</p>
                     </div>
@@ -32,7 +32,7 @@
                                 <li>დიზაინ პლატფორმების მიმოხილვა</li>
                                 <li>photoshop-ის განხილვა</li>
                                 <li>tool-ების განხილვა/გატესტვა</li>
-                                <li>ფოტო/ფაილების შემოტანა/შენახვა</li>
+                                <li class="pb-8" >ფოტო/ფაილების შემოტანა/შენახვა</li>
                             </ul>
                         </div>
                     <div>
@@ -47,7 +47,7 @@
                                 class="pl-[20px] text-white text-[17px] lg:text-[22px] list-disc marker:text-[#91c6ea] border-b border-gray-400 max-h-[0px] overflow-y-hidden">
                                 <li>Pen tool-ის და Brush tool-ის შესაძლებლობები</li>
                                 <li>Mask-ის მნიშვნელობა</li>
-                                <li>ლეიერებზე მუშაობა</li>
+                                <li class="pb-8">ლეიერებზე მუშაობა</li>
                             </ul>
                         </div>
                     <div>
@@ -63,7 +63,7 @@
                                 <li>Illustrator-ის განხილვა</li>
                                 <li>Artboard-ების მნიშვნელობა</li>
                                 <li>ხელსაწყოების განხილვა</li>
-                                <li>ფაილების გადატანა სხვა პროგრამებში/შენახვა</li>
+                                <li class="pb-8">ფაილების გადატანა სხვა პროგრამებში/შენახვა</li>
                             </ul>
                         </div>
                     <div>
@@ -79,7 +79,7 @@
                                 <li>ტიპოგრაფიის განხილვა</li>
                                 <li>შრიფტების მნიშვნელობა დიზაინში</li>
                                 <li>ფონტის ვექტორად გარდაქმნა</li>
-                                <li>ფოტოს დაექსფენდება/დატრეისება</li>
+                                <li class="pb-8">ფოტოს დაექსფენდება/დატრეისება</li>
                             </ul>
                         </div>
                     <div>
@@ -103,7 +103,6 @@
                         contentDivs[index].style.maxHeight = "0px"; 
                         arrowIcons[index].classList.remove('rotate-180');
                     }
-       
                 });
             });
                 contentDivs.forEach((contentDiv) => {
